--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,14 +1,9 @@
-# This is a sample build configuration for Java (Maven).
-# Check our guides at https://confluence.atlassian.com/x/zd-5Mw for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-image: maven:3.6.1
+image: pdouble16/bitbucket-pipeline-browsers
 
 pipelines:
   default:
     - step:
         caches:
           - maven
-        script: # Modify the commands below to build your repository.
+        script:
           - mvn -B verify # -B batch mode makes Maven less verbose
